--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           comment_mode: 'replace'
           sources_base_path: ${{ format('{0}/', github.workspace) }}
           files_coverage_table_output_type_order: 'SBFL'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Report coverage
         uses: yukha-dw/report-nyc-coverage-github-action@v1.2.7-origin
@@ -37,3 +38,4 @@ jobs:
           comment_mode: 'replace'
           sources_base_path: ${{ format('{0}/', github.workspace) }}
           files_coverage_table_output_type_order: 'SBFL'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
