--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
       - 'opened'
       - 'synchronize'
 
+permissions:
+   pull-requests: write
+
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
