--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         id: report-custom
         with:
           coverage_file: 'coverage/coverage-summary.json'
-          comment_template_file: '.github/cov-template.md'
+          comment_template_file: '.github/cov-template-1.2.7.md'
           comment_mode: 'replace'
           sources_base_path: ${{ format('{0}/', github.workspace) }}
           files_coverage_table_output_type_order: 'SBFL'
@@ -34,7 +34,7 @@ jobs:
         id: report-origin
         with:
           coverage_file: 'coverage/coverage-summary.json'
-          comment_template_file: '.github/cov-template.md'
+          comment_template_file: '.github/cov-template-origin.md'
           comment_mode: 'replace'
           sources_base_path: ${{ format('{0}/', github.workspace) }}
           files_coverage_table_output_type_order: 'SBFL'
